# plain-quic-plugin

./: CMakeLists.txt  README  README.md
cmake/: FindGLIB2.cmake  FindWSLibrary.cmake  FindWSWinLibs.cmake  LocatePythonModule.cmake  UseMakePluginReg.cmake
doc/: README.md  intro.md  quic.pcap
src/: packet-plain-quic.c  packet-plain-quic.h
tools/: make-plugin-reg.py
